manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebook-deployment
  namespace: phonebook
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: phonebook
  template:
    metadata:
      labels:
        app: phonebook
    spec:
      containers:
        - name: phonebook-service
          image: ghcr.io/tel-ran-de/phonebook-m9-1:d3b7a9b82ca97b4fcbb462c394fb0d514cc23e89
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      imagePullSecrets:
        - name: ghcr-secret
