manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-service
  namespace: phonebook
  labels:
    app: phonebook
spec:
  selector:
    app: phonebook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
